--- a/.env.vagrant
+++ b/.env.vagrant
@@ -1,15 +1,15 @@
 APP_ENV=local
-APP_KEY=base64:ahF1wPqisOnPbCJReob5U4ZdjuK/cxJXlOXGHAwi1hg=
+APP_KEY=base64:2m6Q/r6skDOp001wnPs82nj1yetkG0sLLDK1UwxSIW0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=localhost
+DB_PORT=33060
 DB_DATABASE=tootpay
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -22,6 +22,6 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=2d69d509a6b94f
+MAIL_PASSWORD=6a5f987e5ed068
 MAIL_ENCRYPTION=null
